--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "storybook-addon-flags",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Allows setting and reading of feature flags in storybook components",
   "keywords": [
-    "storybook-addons", "storybook-addons"
+    "storybook-addons",
+    "storybook-addons"
   ],
   "repository": {
     "type": "git",
@@ -93,7 +94,15 @@
   "storybook": {
     "displayName": "Feature Flags",
     "supportedFrameworks": [
-      "react", "vue", "angular", "web-components", "ember", "html", "svelte", "preact", "react-native"
+      "react",
+      "vue",
+      "angular",
+      "web-components",
+      "ember",
+      "html",
+      "svelte",
+      "preact",
+      "react-native"
     ],
     "icon": "https://user-images.githubusercontent.com/321738/63501763-88dbf600-c4cc-11e9-96cd-94adadc2fd72.png"
   }
