--- a/package.json
+++ b/package.json
@@ -43,22 +43,15 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "peerDependencies": {
+    "@storybook/react-vite": "^9.0.16",
+    "storybook": "^9.0.16"
+  },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/components": "^8.2.5",
-    "@storybook/core-events": "^8.2.5",
-    "@storybook/manager": "^8.2.5",
-    "@storybook/manager-api": "^8.2.5",
-    "@storybook/preview": "^8.2.5",
-    "@storybook/preview-api": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/react-vite": "^8.2.5",
-    "@storybook/test": "^8.2.5",
-    "@storybook/theming": "^8.2.5",
-    "@storybook/types": "^8.2.5",
+    "@storybook/addon-docs": "^9.0.16",
+    "@storybook/addon-links": "^9.0.16",
+    "@storybook/icons": "^1.4.0",
+    "@storybook/react-vite": "^9.0.16",
     "@types/node": "^18.15.0",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
@@ -71,7 +64,7 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^8.2.5",
+    "storybook": "^9.0.16",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
